add_library(fluid_boundary_static_confinement_module fluid_boundary_static_confinement/fluid_boundary_static_confinement.cpp fluid_boundary_static_confinement/fluid_boundary_static_confinement.h)
target_include_directories(fluid_boundary_static_confinement_module PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/fluid_boundary_static_confinement> $<INSTALL_INTERFACE:include/fluid_boundary_static_confinement>)
target_link_libraries(fluid_boundary_static_confinement_module PUBLIC sphinxsys_2d)
target_link_libraries(fluid_boundary_static_confinement_module PUBLIC sphinxsys_3d)